--- a/menu1.html
+++ b/menu1.html
@@ -52,10 +52,11 @@
       <div class="cart-items-container">
         <div class="cart-item">
           <i class="fas fa-times"></i>
-          <img src="/image/Bakso.png" alt="menu" />
+          <img src="/image/bakso.png" alt="menu" />
           <div class="content">
             <h3>Bakso</h3>
             <div class="price">Rp.10.000</div>
+        </td>
           </div>
         </div>
         <div class="cart-item">
