--- a/menu2.html
+++ b/menu2.html
@@ -52,7 +52,7 @@
       <div class="cart-items-container">
         <div class="cart-item">
           <i class="fas fa-times"></i>
-          <img src="/image/Bakso.png" alt="menu" />
+          <img src="/image/bakso1.png" alt="menu" />
           <div class="content">
             <h3>Bakso</h3>
             <div class="price">Rp.10.000</div>
@@ -68,7 +68,7 @@
         </div>
         <div class="cart-item">
           <i class="fas fa-times"></i>
-          <img src="/image/teh.png" alt="menu" />
+          <img src="/image/teh1.png" alt="menu" />
           <div class="content">
             <h3>Es Teh</h3>
             <div class="price">Rp.5.000</div>
@@ -103,7 +103,7 @@
         </div>
         <div class="box">
           <div class="box-head">
-            <img src="./image/nasikremes.png" alt="" />
+            <img src="./image/nasikremes2.png" alt="" />
             <h3>Nasi Kremes</h3>
             <div class="price">Rp.11.000</div>
           </div>
@@ -113,7 +113,7 @@
         </div>
         <div class="box">
           <div class="box-head">
-            <img src="./image/nasipenyet.png" alt="" />
+            <img src="./image/penyetan2.png" alt="" />
             <h3>Nasi Penyet</h3>
             <div class="price">Rp.12.000</div>
           </div>
@@ -123,7 +123,7 @@
         </div>
         <div class="box">
           <div class="box-head">
-            <img src="./image/Bakso.png" alt="" />
+            <img src="./image/bakso1.png" alt="" />
             <h3>Bakso</h3>
             <div class="price">Rp.10.000</div>
           </div>
@@ -133,7 +133,7 @@
         </div>
         <div class="box">
           <div class="box-head">
-            <img src="./image/es-buah-removebg-preview.png" alt="" />
+            <img src="./image/esbuah.png" alt="" />
             <h3>Es Buah</h3>
             <div class="price">Rp.5.000</div>
           </div>
